[tool.poetry]
name = "cstake"
version = "0.1.0"
description = ""
authors = ["Jarred Green <astrojarred@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pycardano = { git = "https://github.com/astrojarred/pycardano.git", branch = "add-wallet-classes" }
pymongo = "^4.3.2"
fastapi = "^0.85.1"
uvicorn = {extras = ["standard"], version = "^0.19.0"}


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.16.1"
ipython = "^8.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
